--- a/module-1/deployment.ipynb
+++ b/module-1/deployment.ipynb
@@ -31,13 +31,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f348498b-f277-4514-b163-fe5ed9afe6fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%capture --no-stderr\n",
-    "%pip install --quiet -U langgraph_sdk langchain_core"
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -380,19 +392,11 @@
     "    if chunk.data and chunk.event != \"metadata\":\n",
     "        print(chunk.data['messages'][-1])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "445cb34d-c3b8-4446-a7e3-5fe938abf99b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "academy",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -406,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
