--- a/module-2/state-schema.ipynb
+++ b/module-2/state-schema.ipynb
@@ -35,13 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b9a896f4-8509-456a-9a25-46532342f459",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture --no-stderr\n",
-    "%pip install --quiet -U langgraph"
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "_ = load_dotenv()"
    ]
   },
   {
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2f7a0d6d-f70b-44ed-86e3-7cdb39873ba4",
    "metadata": {},
    "outputs": [
@@ -157,13 +158,13 @@
     "    return {\"mood\": \"sad\"}\n",
     "\n",
     "def decide_mood(state) -> Literal[\"node_2\", \"node_3\"]:\n",
-    "        \n",
+    "\n",
     "    # Here, let's just do a 50 / 50 split between nodes 2, 3\n",
     "    if random.random() < 0.5:\n",
     "\n",
     "        # 50% of the time, we return Node 2\n",
     "        return \"node_2\"\n",
-    "    \n",
+    "\n",
     "    # 50% of the time, we return Node 3\n",
     "    return \"node_3\"\n",
     "\n",
@@ -404,7 +405,7 @@
     "\n",
     "class PydanticState(BaseModel):\n",
     "    name: str\n",
-    "    mood: str # \"happy\" or \"sad\" \n",
+    "    mood: str # \"happy\" or \"sad\"\n",
     "\n",
     "    @field_validator('mood')\n",
     "    @classmethod\n",
